--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
     height: 100%;
     position: relative;
     display: flex;
+    background-color: pink;
 }
 
 .page::before {
